change in setup html

--- a/setup.html
+++ b/setup.html
@@ -4,7 +4,7 @@
 
 <h2>Initial Setup</h2>
 
-<input id="input1" placeholder="Enter Input1 Value" /><br><br>
+<input id="input1" placeholder="Enter Employee Code" /><br><br>
 <button onclick="save()">Save & Continue</button>
 
 <script>
