--- a/setup.html
+++ b/setup.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
-<body style="text-align:center;margin-top:50px;font-family:Arial">
+  <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  </head>
+<body class="bg-light">
 
-<h2>Initial Setup</h2>
+  <div class="container py-5">
 
-<input id="input1" placeholder="Enter Employee Code" /><br><br>
-<button onclick="save()">Save & Continue</button>
+       <div class="card shadow-lg border-0 rounded-4">
+
+          <div class="card-header bg-primary text-white text-center rounded-top-4">
+            <h3 class="mb-0">Punching Data Software</h3>
+          </div>
+
+           <div class="card-body">
+              <div class="row justify-content-center mb-4">
+                <div class="col-md-12 text-center">
+                  <input id="input1" placeholder="Enter Employee Code"  class="form-control form-control-lg text-center" /></br></br>
+                  <button class="btn btn-primary btn-lg" onclick="save()">Save & Continue</button>
+                </div>
+           </div>
+
+        </div>
+  </div>
+
+
+
 
 <script>
 function save() {
